--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <!--   <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RocketCoffe</title>
 </head>
 <body>
+    <header>
+        <h1>RocketCoffe</h1>
+        <p>Aberto todos os dias. 8h-21h</p>
+    </header>
+    
     
 </body>
 </html>
