Modificado e adicionado section com lista como conteudo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
         <h1>RocketCoffe</h1>
         <p>Aberto todos os dias. 8h-21h</p>
     </header>
+
+    <section>
+        <h2>Brunch</h2>
+
+        <ul>
+            <li>
+                <div>
+                    <h3>Waffle Doce</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis esse animi rem quae placeat deserunt hic consequatur, quam nulla magni laudantium ab ipsam culpa adipisci in nam sunt voluptatum assumenda.</p>
+                </div>
+            </li>
+        </ul>
+
+    </section>
     
     
 </body>
