--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
         <ul>
             <li>
-                <div>
+                <div class="details">
                     <h3>Waffle Doce</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis esse animi rem quae placeat deserunt hic consequatur, quam nulla magni laudantium ab ipsam culpa adipisci in nam sunt voluptatum assumenda.</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis esse animi rem quae placeat deserunt hic consequatur, quam nulla magni laudantium ab ipsam culpa adipisci in nam sunt voluptatum assumenda.</p>
                 </div>
+                <strong>R$ 37,70</strong>
             </li>
         </ul>
 
