Adicionado class em tag strong, e adicionado elemento maça doce

--- a/index.html
+++ b/index.html
@@ -21,9 +21,19 @@
                     <h3>Waffle Doce</h3>
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis esse animi rem quae placeat deserunt hic consequatur, quam nulla magni laudantium ab ipsam culpa adipisci in nam sunt voluptatum assumenda.</p>
                 </div>
-                <strong>R$ 37,70</strong>
+                <strong class="price">R$ 37,70</strong>
+            </li>
+
+            <li>
+                <div class="details">
+                    <h3>Maça Doce</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis esse animi rem quae placeat deserunt hic consequatur, quam nulla magni laudantium ab ipsam culpa adipisci in nam sunt voluptatum assumenda.</p>
+                </div>
+                <strong class="price">R$ 17,70</strong>
             </li>
         </ul>
+
+        
 
     </section>
     
